    SIGPIPE due to tar closing the pipe without exhausting all the data
    available. Closes: #523329
  * dpkg-gencontrol now handles properly (empty) dependencies which contain
    only spaces. Closes: #522787
  * dpkg-source now accepts additional tarballs (in format "3.0 (quilt)")
    with a "component" name containing dashes. Closes: #524376

  [ Guillem Jover ]
  * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
    Thanks to Ivan Masár.
  * Sync archtable with architectures currently present in Debian sid.
    - Remove m68k.
    - Add kfreebsd-i386 and kfreebsd-amd64.
  * Add avr32 to cputable. Closes: #523456
  * Detect the curses headers to use instead of hardcoding them.

  [ Frank Lichtenheld ]
  * Dpkg::Version: Remove unnecessary function next_elem which just
    replicates the standard shift behaviour.

  [ Updated dselect translations ]
  * German (Sven Joachim).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French (Christian Perrier).
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Added dpkg translations ]
  * Asturian (Marcos Alvarez Costales). Closes: #519478, #519813, #519998

  [ Updated dpkg translations ]
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Slovak (Ivan Masár). Closes: #519084
  * Swedish (Peter Krefting).
  * Esperanto (Felipe Castro). Closes: #523023

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Frank Lichtenheld <djpig@debian.org>  Sun, 29 Mar 2009 13:14:30 +0200

dpkg (1.15.0) experimental; urgency=low

  [ Guillem Jover ]
  * Do not suggest manually changing the alternative symlinks on
    update-alternative's verbose mode. Closes: #412487
  * Refactor subprocess signal setup.
  * Mark and coalesce similar strings for translation.
  * Add '.be' to the default dpkg-source -i regex. Closes: #481716
    Based on a patch by Ben Finney.