@@ -57,6 +57,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     only spaces. Closes: #522787
   * dpkg-source now accepts additional tarballs (in format "3.0 (quilt)")
     with a "component" name containing dashes. Closes: #524376
+  * Fix dpkg-source to not complain on binary files that are ignored and are
+    not going to be included in the debian tarball of a "3.0 (quilt)" source
+    package. Closes: #524375
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
